# save-crash-logs-rs

./: Cargo.toml
src/: lib.rs  report.rs
tests/custom-panic/: Cargo.toml
tests/custom-panic/src/: main.rs
tests/custom-panic/tests/: integration.rs
tests/single-panic/: Cargo.toml
tests/single-panic/src/: main.rs
tests/single-panic/tests/: integration.rs
