[package]
name = "custom-panic-test"
version = "0.1.0"
authors = ["Human Panic Authors <human-panic-crate@example.com>"]
edition = "2018"

[package.metadata.release]
release = false

[dependencies]
human-panic = { path = "../.." }
dirs = "5.0.0"

[dev-dependencies]
snapbox = { version = "0.4.10", features = ["cmd"] }